[gd_scene load_steps=5 format=3 uid="uid://iaj84p1weuhs"]

[ext_resource type="Script" path="res://scripts/text_box.gd" id="1_q6fdp"]
[ext_resource type="Texture2D" uid="uid://c0em8hivwatdi" path="res://sprites/ui/textbox_template.png" id="2_u7hdy"]
[ext_resource type="FontFile" uid="uid://kome3jltn065" path="res://fonts/Retro Gaming.ttf" id="3_bpgfy"]
[ext_resource type="PackedScene" uid="uid://dd1s28kbfnt7j" path="res://scenes/sfx.tscn" id="4_4pnpt"]

[node name="text_box" type="MarginContainer"]
texture_filter = 1
offset_right = 81.0
offset_bottom = 32.0
script = ExtResource("1_q6fdp")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_u7hdy")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
texture_filter = 1
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 2

[node name="Label" type="Label" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_bpgfy")
theme_override_font_sizes/font_size = 5
text = "Testing"
vertical_alignment = 1

[node name="Letter_Display" type="Timer" parent="."]
one_shot = true

[node name="text_duration" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="sfx" parent="." instance=ExtResource("4_4pnpt")]

[connection signal="timeout" from="Letter_Display" to="." method="_on_letter_display_timeout"]
[connection signal="timeout" from="text_duration" to="." method="_on_text_duration_timeout"]
